assignment2&3/target/BKOOLParser.py
# Generated from main/bkool/parser/BKOOL.g4 by ANTLR 4.9.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO



class BKOOLParser ( Parser ):

    grammarFileName = "BKOOL.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'boolean'", "'break'", "'class'", 
                     "'continue'", "'do'", "'else'", "'extends'", "'float'", 
                     "'if'", "'int'", "'new'", "'string'", "'then'", "'for'", 
                     "'return'", "'void'", "'true'", "'false'", "'nil'", 
                     "'this'", "'final'", "'static'", "'to'", "'downto'", 
                     "'+'", "'-'", "'*'", "'/'", "'\\'", "'%'", "'!='", 
                     "'=='", "'<'", "'>'", "'<='", "'>='", "'||'", "'&&'", 
                     "'!'", "'^'", "'('", "')'", "'{'", "'}'", "','", "'['", 
                     "']'", "'.'", "';'", "':'", "':='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "INTLIT", "FLOATLIT", "BOOLIT", 
                      "STRINGLIT", "WRITELN", "BOOLEAN", "BREAK", "CLASS", 
                      "CONTINUE", "DO", "ELSE", "EXTENDS", "FLOATTYPE", 
                      "IF", "INTTYPE", "NEW", "STRING", "THEN", "FOR", "RETURN", 
                      "VOIDTYPE", "TRUE", "FALSE", "NIL", "THIS", "FINAL", 
                      "STATIC", "TO", "DOWNTO", "ADD", "SUB", "MUL", "FLOAT_DIV", 
                      "INT_DIV", "MOD", "NOT_EQ", "EQ", "LT", "GT", "LT_EQ", 
                      "GT_EQ", "OR", "AND", "NOT", "CONCAT", "LB", "RB", 
                      "LP", "RP", "COMMA", "LSQB", "RSQB", "DOT", "SEMI", 
                      "COLON", "ASS", "ID", "BLOCK_COMMENT", "LINE_COMMENT", 
                      "WS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", "ERROR_CHAR" ]

    RULE_program = 0
    RULE_classDecls = 1
    RULE_classDecl = 2
    RULE_memberListNoNull = 3
    RULE_classAttr = 4
    RULE_attrDecls = 5
    RULE_attrDecl = 6
    RULE_classMethod = 7
    RULE_constructor = 8
    RULE_params = 9
    RULE_param = 10
    RULE_ids = 11
    RULE_blockStmt = 12
    RULE_varDecls = 13
    RULE_varDecl = 14
    RULE_listVar = 15
    RULE_stmts = 16
    RULE_stmt = 17
    RULE_assignStmt = 18
    RULE_lhs = 19
    RULE_ifStmt = 20
    RULE_forStmt = 21
    RULE_breakStmt = 22
    RULE_contiStmt = 23
    RULE_returnStmt = 24
    RULE_invoStmt = 25
    RULE_expr = 26
    RULE_expr1 = 27
    RULE_expr2 = 28
    RULE_expr3 = 29
    RULE_expr4 = 30
    RULE_expr5 = 31
    RULE_expr6 = 32
    RULE_expr7 = 33
    RULE_expr8 = 34
    RULE_expr9 = 35
    RULE_expr10 = 36
    RULE_expr11 = 37
    RULE_sube = 38
    RULE_exprs = 39
    RULE_arraytype = 40
    RULE_ptype = 41
    RULE_typ = 42
    RULE_methodtype = 43
    RULE_arraylit = 44
    RULE_ele = 45
    RULE_ele_list = 46

    ruleNames =  [ "program", "classDecls", "classDecl", "memberListNoNull", 
                   "classAttr", "attrDecls", "attrDecl", "classMethod", 
                   "constructor", "params", "param", "ids", "blockStmt", 
                   "varDecls", "varDecl", "listVar", "stmts", "stmt", "assignStmt", 
                   "lhs", "ifStmt", "forStmt", "breakStmt", "contiStmt", 
                   "returnStmt", "invoStmt", "expr", "expr1", "expr2", "expr3", 
                   "expr4", "expr5", "expr6", "expr7", "expr8", "expr9", 
                   "expr10", "expr11", "sube", "exprs", "arraytype", "ptype", 
                   "typ", "methodtype", "arraylit", "ele", "ele_list" ]

    EOF = Token.EOF
    T__0=1
    INTLIT=2
    FLOATLIT=3
    BOOLIT=4
    STRINGLIT=5
    WRITELN=6
    BOOLEAN=7
    BREAK=8
    CLASS=9
    CONTINUE=10
    DO=11
    ELSE=12
    EXTENDS=13
    FLOATTYPE=14
    IF=15
    INTTYPE=16
    NEW=17
    STRING=18
    THEN=19
    FOR=20
    RETURN=21
    VOIDTYPE=22
    TRUE=23
    FALSE=24
    NIL=25
    THIS=26
    FINAL=27
    STATIC=28
    TO=29
    DOWNTO=30
    ADD=31
    SUB=32
    MUL=33
    FLOAT_DIV=34
    INT_DIV=35
    MOD=36
    NOT_EQ=37
    EQ=38
    LT=39
    GT=40
    LT_EQ=41
    GT_EQ=42
    OR=43
    AND=44
    NOT=45
    CONCAT=46
    LB=47
    RB=48
    LP=49
    RP=50
    COMMA=51
    LSQB=52
    RSQB=53
    DOT=54
    SEMI=55
    COLON=56
    ASS=57
    ID=58
    BLOCK_COMMENT=59
    LINE_COMMENT=60
    WS=61
    UNCLOSE_STRING=62
    ILLEGAL_ESCAPE=63
    ERROR_CHAR=64

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.9.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDecls(self):
            return self.getTypedRuleContext(BKOOLParser.ClassDeclsContext,0)


        def EOF(self):
            return self.getToken(BKOOLParser.EOF, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_program

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = BKOOLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 94
            self.classDecls()
            self.state = 95
            self.match(BKOOLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classDecl(self):
            return self.getTypedRuleContext(BKOOLParser.ClassDeclContext,0)


        def classDecls(self):
            return self.getTypedRuleContext(BKOOLParser.ClassDeclsContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_classDecls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDecls" ):
                return visitor.visitClassDecls(self)
            else:
                return visitor.visitChildren(self)




    def classDecls(self):

        localctx = BKOOLParser.ClassDeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_classDecls)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.classDecl()
                self.state = 98
                self.classDecls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.classDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CLASS(self):
            return self.getToken(BKOOLParser.CLASS, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(BKOOLParser.ID)
            else:
                return self.getToken(BKOOLParser.ID, i)

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def EXTENDS(self):
            return self.getToken(BKOOLParser.EXTENDS, 0)

        def memberListNoNull(self):
            return self.getTypedRuleContext(BKOOLParser.MemberListNoNullContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_classDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDecl" ):
                return visitor.visitClassDecl(self)
            else:
                return visitor.visitChildren(self)




    def classDecl(self):

        localctx = BKOOLParser.ClassDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_classDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 103
            self.match(BKOOLParser.CLASS)
            self.state = 104
            self.match(BKOOLParser.ID)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.EXTENDS:
                self.state = 105
                self.match(BKOOLParser.EXTENDS)
                self.state = 106
                self.match(BKOOLParser.ID)


            self.state = 109
            self.match(BKOOLParser.LP)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.FLOATTYPE) | (1 << BKOOLParser.INTTYPE) | (1 << BKOOLParser.STRING) | (1 << BKOOLParser.VOIDTYPE) | (1 << BKOOLParser.FINAL) | (1 << BKOOLParser.STATIC) | (1 << BKOOLParser.ID))) != 0):
                self.state = 110
                self.memberListNoNull()


            self.state = 113
            self.match(BKOOLParser.RP)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MemberListNoNullContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def classAttr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ClassAttrContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ClassAttrContext,i)


        def classMethod(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKOOLParser.ClassMethodContext)
            else:
                return self.getTypedRuleContext(BKOOLParser.ClassMethodContext,i)


        def getRuleIndex(self):
            return BKOOLParser.RULE_memberListNoNull

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMemberListNoNull" ):
                return visitor.visitMemberListNoNull(self)
            else:
                return visitor.visitChildren(self)




    def memberListNoNull(self):

        localctx = BKOOLParser.MemberListNoNullContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_memberListNoNull)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 117 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 117
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 115
                    self.classAttr()
                    pass

                elif la_ == 2:
                    self.state = 116
                    self.classMethod()
                    pass


                self.state = 119 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not ((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.FLOATTYPE) | (1 << BKOOLParser.INTTYPE) | (1 << BKOOLParser.STRING) | (1 << BKOOLParser.VOIDTYPE) | (1 << BKOOLParser.FINAL) | (1 << BKOOLParser.STATIC) | (1 << BKOOLParser.ID))) != 0)):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassAttrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(BKOOLParser.TypContext,0)


        def attrDecls(self):
            return self.getTypedRuleContext(BKOOLParser.AttrDeclsContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def FINAL(self):
            return self.getToken(BKOOLParser.FINAL, 0)

        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def getRuleIndex(self):
            return BKOOLParser.RULE_classAttr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassAttr" ):
                return visitor.visitClassAttr(self)
            else:
                return visitor.visitChildren(self)




    def classAttr(self):

        localctx = BKOOLParser.ClassAttrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_classAttr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 121
                self.match(BKOOLParser.FINAL)

            elif la_ == 2:
                self.state = 122
                self.match(BKOOLParser.STATIC)

            elif la_ == 3:
                self.state = 123
                self.match(BKOOLParser.STATIC)
                self.state = 124
                self.match(BKOOLParser.FINAL)

            elif la_ == 4:
                self.state = 125
                self.match(BKOOLParser.FINAL)
                self.state = 126
                self.match(BKOOLParser.STATIC)


            self.state = 129
            self.typ()
            self.state = 130
            self.attrDecls()
            self.state = 131
            self.match(BKOOLParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrDeclsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def attrDecl(self):
            return self.getTypedRuleContext(BKOOLParser.AttrDeclContext,0)


        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def attrDecls(self):
            return self.getTypedRuleContext(BKOOLParser.AttrDeclsContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attrDecls

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrDecls" ):
                return visitor.visitAttrDecls(self)
            else:
                return visitor.visitChildren(self)




    def attrDecls(self):

        localctx = BKOOLParser.AttrDeclsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_attrDecls)
        try:
            self.state = 138
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 133
                self.attrDecl()
                self.state = 134
                self.match(BKOOLParser.COMMA)
                self.state = 135
                self.attrDecls()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 137
                self.attrDecl()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttrDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def expr(self):
            return self.getTypedRuleContext(BKOOLParser.ExprContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_attrDecl

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttrDecl" ):
                return visitor.visitAttrDecl(self)
            else:
                return visitor.visitChildren(self)




    def attrDecl(self):

        localctx = BKOOLParser.AttrDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_attrDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(BKOOLParser.ID)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKOOLParser.T__0:
                self.state = 141
                self.match(BKOOLParser.T__0)
                self.state = 142
                self.expr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassMethodContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def methodtype(self):
            return self.getTypedRuleContext(BKOOLParser.MethodtypeContext,0)


        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def blockStmt(self):
            return self.getTypedRuleContext(BKOOLParser.BlockStmtContext,0)


        def STATIC(self):
            return self.getToken(BKOOLParser.STATIC, 0)

        def params(self):
            return self.getTypedRuleContext(BKOOLParser.ParamsContext,0)


        def constructor(self):
            return self.getTypedRuleContext(BKOOLParser.ConstructorContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_classMethod

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassMethod" ):
                return visitor.visitClassMethod(self)
            else:
                return visitor.visitChildren(self)




    def classMethod(self):

        localctx = BKOOLParser.ClassMethodContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_classMethod)
        self._la = 0 # Token type
        try:
            self.state = 158
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==BKOOLParser.STATIC:
                    self.state = 145
                    self.match(BKOOLParser.STATIC)


                self.state = 148
                self.methodtype()
                self.state = 149
                self.match(BKOOLParser.ID)
                self.state = 150
                self.match(BKOOLParser.LB)
                self.state = 152
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.FLOATTYPE) | (1 << BKOOLParser.INTTYPE) | (1 << BKOOLParser.STRING) | (1 << BKOOLParser.ID))) != 0):
                    self.state = 151
                    self.params()


                self.state = 154
                self.match(BKOOLParser.RB)
                self.state = 155
                self.blockStmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 157
                self.constructor()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def LB(self):
            return self.getToken(BKOOLParser.LB, 0)

        def RB(self):
            return self.getToken(BKOOLParser.RB, 0)

        def blockStmt(self):
            return self.getTypedRuleContext(BKOOLParser.BlockStmtContext,0)


        def params(self):
            return self.getTypedRuleContext(BKOOLParser.ParamsContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_constructor

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstructor" ):
                return visitor.visitConstructor(self)
            else:
                return visitor.visitChildren(self)




    def constructor(self):

        localctx = BKOOLParser.ConstructorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_constructor)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            self.match(BKOOLParser.ID)
            self.state = 161
            self.match(BKOOLParser.LB)
            self.state = 163
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKOOLParser.BOOLEAN) | (1 << BKOOLParser.FLOATTYPE) | (1 << BKOOLParser.INTTYPE) | (1 << BKOOLParser.STRING) | (1 << BKOOLParser.ID))) != 0):
                self.state = 162
                self.params()


            self.state = 165
            self.match(BKOOLParser.RB)
            self.state = 166
            self.blockStmt()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(BKOOLParser.ParamContext,0)


        def SEMI(self):
            return self.getToken(BKOOLParser.SEMI, 0)

        def params(self):
            return self.getTypedRuleContext(BKOOLParser.ParamsContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_params

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParams" ):
                return visitor.visitParams(self)
            else:
                return visitor.visitChildren(self)




    def params(self):

        localctx = BKOOLParser.ParamsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_params)
        try:
            self.state = 173
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 168
                self.param()
                self.state = 169
                self.match(BKOOLParser.SEMI)
                self.state = 170
                self.params()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 172
                self.param()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def typ(self):
            return self.getTypedRuleContext(BKOOLParser.TypContext,0)


        def ids(self):
            return self.getTypedRuleContext(BKOOLParser.IdsContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_param

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = BKOOLParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.typ()
            self.state = 176
            self.ids()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(BKOOLParser.ID, 0)

        def COMMA(self):
            return self.getToken(BKOOLParser.COMMA, 0)

        def ids(self):
            return self.getTypedRuleContext(BKOOLParser.IdsContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_ids

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIds" ):
                return visitor.visitIds(self)
            else:
                return visitor.visitChildren(self)




    def ids(self):

        localctx = BKOOLParser.IdsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_ids)
        try:
            self.state = 182
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 178
                self.match(BKOOLParser.ID)
                self.state = 179
                self.match(BKOOLParser.COMMA)
                self.state = 180
                self.ids()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 181
                self.match(BKOOLParser.ID)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlockStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LP(self):
            return self.getToken(BKOOLParser.LP, 0)

        def RP(self):
            return self.getToken(BKOOLParser.RP, 0)

        def varDecls(self):
            return self.getTypedRuleContext(BKOOLParser.VarDeclsContext,0)


        def stmts(self):
            return self.getTypedRuleContext(BKOOLParser.StmtsContext,0)


        def getRuleIndex(self):
            return BKOOLParser.RULE_blockStmt

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBlockStmt" ):
                return visitor.visitBlockStmt(self)
            else:
                return visitor.visitChildren(self)




    def blockStmt(self):

        localctx = BKOOLParser.BlockStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_blockStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 184
            self.match(BKOOLParser.LP)
            self.state = 186
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,14,self._ctx)
            if la_ == 1:
                self.state = 185
                self.varDecls()


            self.state = 189
            self._errHandler.sync(self)
            _la = self._input.LA(1)
